[package]
name = "starcoin-abi-resolver"
version = "1.5.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starcoin-vm-types = {path = "../../vm/types"}
starcoin-abi-types = {path = "../types"}
anyhow="~1"
starcoin-resource-viewer = {path = "../../vm/resource-viewer"}
move-model = { git = "https://github.com/starcoinorg/diem", rev="6af5ffb95913962100ad661e07f44a9a96c4a1e0"  }
[dev-dependencies]
stdlib = {path = "../../vm/stdlib"}
serde_json = "1"
test-helper= {path = "../../test-helper"}
