[package]
name = "starcoin-crypto"
version = "1.6.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0.130" }
serde_bytes = "0.11.5"
hex = "0.4.3"
anyhow = "1.0"
diem-crypto = { package="diem-crypto",  git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" , features = ["fuzzing"] }
diem-crypto-derive = { package="diem-crypto-derive",  git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1"  }
bcs-ext = { package="bcs-ext", path = "../bcs_ext" }
crypto-macro = { package="starcoin-crypto-macro", path = "./crypto-macro"}
rand = "0.8.4"
rand_core = { version = "0.6.3", default-features = false }
once_cell = "1.8.0"
serde-name = "0.1"

[features]
default = []
fuzzing = ["diem-crypto/fuzzing"]
