[package]
name = "starcoin-proptest-helpers"
version = "1.5.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
diem-proptest-helpers = { package="diem-proptest-helpers",  git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8"  }

proptest = "1.0.0"
proptest-derive = "0.3.0"
