[package]
name = "starcoin-move-compiler"
version = "1.5.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.41"
once_cell = "1.8.0"
tempfile = "3.1.0"
regex = { version = "1.4.3", default-features = false, features = ["std", "perf"] }
move-lang = { package="move-lang", git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8"  }
move-command-line-common = {git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8"}
move-lang-test-utils = { package="move-lang-test-utils", git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8"  }
walkdir = "2.3"
rayon = "1.5.1"
itertools = "0.10.1"
starcoin-crypto = { path = "../../commons/crypto"}
starcoin-vm-types = { path = "../types"}
starcoin-logger = { path = "../../commons/logger"}

[dev-dependencies]
stest = {path = "../../commons/stest"}
