[package]
name = "move-coverage"
version = "1.6.0"
authors = ["Diem Association <opensource@diem.org>", "Starcoin Core Dev <dev@starcoin.org>"]
description = "starcoin Move VM code coverage"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
once_cell = "1.8.0"
petgraph = "0.5.1"
structopt = "0.3.23"
serde = { version = "1.0.130", default-features = false }
anyhow = "1.0.41"
codespan = { version = "0.8.0", features = ["serialization"] }
colored = "2.0.0"
bcs = "0.1.2"

bytecode-source-map = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1"  }
move-coverage = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1"  }
move-binary-format = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1"  }
[features]
default = []

