[package]
name = "move-coverage"
version = "1.5.0"
authors = ["Diem Association <opensource@diem.org>", "Starcoin Core Dev <dev@starcoin.org>"]
description = "starcoin Move VM code coverage"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
once_cell = "1.8.0"
petgraph = "0.5.1"
structopt = "0.3.22"
serde = { version = "1.0.129", default-features = false }
anyhow = "1.0.41"
codespan = { version = "0.8.0", features = ["serialization"] }
colored = "2.0.0"
bcs = "0.1.2"

bytecode-source-map = { git = "https://github.com/starcoinorg/diem", rev="6af5ffb95913962100ad661e07f44a9a96c4a1e0"  }
move-coverage = { git = "https://github.com/starcoinorg/diem", rev="6af5ffb95913962100ad661e07f44a9a96c4a1e0"  }
move-binary-format = { git = "https://github.com/starcoinorg/diem", rev="6af5ffb95913962100ad661e07f44a9a96c4a1e0"  }
[features]
default = []

