[package]
name = "starcoin-move-explain"
version = "1.5.0"
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem Move abort code explanations"
repository = "https://github.com/diem/diem"
homepage = "https://diem.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
structopt = "0.3.22"
stdlib = { package="stdlib", path = "../stdlib"}
move-core-types = { git = "https://github.com/starcoinorg/diem", rev = "9cf472607f028c90c3deab12bf4757466039fcba" }
bcs-ext = { package="bcs-ext", path = "../../commons/bcs_ext" }

[features]
default = []
