[package]
name = "starcoin-natives"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errmapgen = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" }
docgen = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" }
move-command-line-common = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" }
move-prover = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" }
move-vm-types = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" }
move-vm-runtime = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" }
move-binary-format = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" }
move-core-types = { git = "https://github.com/starcoinorg/diem", rev="ae28a902f1c2dc9c1b09c0e18049d43bdeecdaf1" }
starcoin-crypto={path = "../../commons/crypto"}
log = "0.4.14"
walkdir = "2.3.1"
smallvec = "1.6.1"
tiny-keccak={version="2", features = ["keccak"]}

[features]
testing=[]