[package]
name = "starcoin-resource-viewer"
version = "1.5.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
starcoin-vm-types = { path = "../types" }
move-binary-format = {git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8"  }
serde_json = "1.0"
serde = { version = "1.0.129", features = ["derive", "rc"] }
anyhow = "1.0.41"
once_cell = "1.8.0"
hex = "0.4.3"
