[package]
name = "starcoin-vm-runtime"
version = "1.5.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.41"
once_cell = "1.8.0"
prometheus = "0.12.0"
starcoin-types = { path = "../../types"}
move-vm-runtime = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
move-stdlib = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
starcoin-config = { path = "../../config"}
starcoin-logger = {path = "../../commons/logger"}
num_enum = "0.5.4"
crypto = { package="starcoin-crypto", path = "../../commons/crypto"}
rand = "0.8.4"
rand_core = { version = "0.6.3", default-features = false }
bcs-ext = { package="bcs-ext", path = "../../commons/bcs_ext" }
stdlib = { package="stdlib", path = "../stdlib"}
starcoin-vm-types = { path = "../types"}
starcoin-move-compiler = { path = "../compiler"}
starcoin-natives = {path = "../natives"}

[dev-dependencies]

[features]
default = []
testing = ["move-stdlib/testing"]

