[package]
name = "vm-status-translator"
version = "1.6.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "~1"
anyhow = "~1"
starcoin-vm-types = {path = "../types"}
starcoin-move-explain = {path = "../move-explain"}
schemars = {git = "https://github.com/starcoinorg/schemars", rev="0be35d1245dedfc6ab3950500a32cc6af192089d"}
